--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@iconify/react": "^3.2.2",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/wavesurfer.js": "^6.0.3",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
@@ -16,6 +17,7 @@
     "postcss": "^8.4.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-infinite-scroller": "^1.2.6",
     "tailwindcss": "^3.1.2",
     "wavesurfer-react": "^2.1.6",
     "wavesurfer.js": "^6.2.0"
